<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white_d2"
    >

        <ImageButton
            android:id="@+id/button_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:onClick="about_btn"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end|top"
            android:src="@drawable/ic_error_black_24dp"
            android:background="@color/transparent"
            android:tint="@color/orangy_about"
            android:contentDescription="@string/about"/>

        <Button
            android:id="@+id/epidemiology"
            android:onClick="epidemiology_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/epidemiology"
            android:background="@drawable/back"
            android:padding="20dp"
            android:textColor="@color/white"
            android:layout_below="@id/button_about"
            android:layout_centerHorizontal="true"/>
        <LinearLayout
            android:id="@+id/linear_covid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:weightSum="3"
            android:layout_below="@id/epidemiology"
            android:layout_above="@id/treatment"
            android:layout_gravity="center"
            android:gravity="center">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/symptoms"
                    android:onClick="symptoms_btn"
                    android:background="@drawable/back"
                    android:padding="8dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:textSize="12sp"/>
                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:text="@string/covid"
                    android:onClick="map_btn"
                    android:textColor="@color/white"
                    android:background="@drawable/covid19_back"
                    android:padding="9dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"/>
                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/pathogensis"
                    android:onClick="pathogensis_btn"
                    android:background="@drawable/back"
                    android:padding="8dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"/>


        </LinearLayout>
        <Button
            android:id="@+id/treatment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/clinically"
            android:onClick="treatment_btn"
            android:background="@drawable/back"
            android:padding="20dp"
            android:textColor="@color/white"
            android:gravity="bottom|center"
            android:layout_marginBottom="100dp"
            android:layout_above="@id/emergency"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />
        <Button
            android:id="@+id/emergency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/emergency"
            android:onClick="emergency_btn"
            android:background="@drawable/emerge_back"
            android:padding="20dp"
            android:textColor="@color/white"
            android:gravity="bottom|center"
            android:layout_marginBottom="18dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />


</RelativeLayout>